Simplify parameterised test
The test in question givenCCOutcomeIsNotNullAndMagsCourtOutComeIsNull_whenCheckCCDetailsIsInvoked_thenValidationFails only ever took a single set of parameters, so these have now been relocated inside the method.